# multicoder

./: .gitignore  .travis.yml  README.md  pre_commit.sh  pyproject.toml  run.py  setup.py  tox.ini
multicoder/: __init__.py  __main__.py  cli.py  encoders.py
multicoder/tests/: __init__.py
